# inputforge

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.json  DESIGN.md  Dioxus.toml  PRODUCT.md  package.json
.cargo/: config.toml
.claude/: settings.json
crates/inputforge-app/: Cargo.toml  build.rs
crates/inputforge-app/assets/: README.md  icon.rgba
crates/inputforge-app/src/: cli.rs  main.rs  tray.rs
crates/inputforge-autostart/: Cargo.toml
crates/inputforge-autostart/src/: error.rs  lib.rs  linux.rs  mock.rs  noop.rs  windows.rs
crates/inputforge-core/: Cargo.toml  build.rs
crates/inputforge-core/src/: action.rs  callbacks.rs  error.rs  lib.rs  mode.rs  pipeline.rs  profile.rs  settings.rs
crates/inputforge-core/src/action/: bulk.rs  condition.rs  mapping.rs  mod.rs  mode_change.rs
crates/inputforge-core/src/device/: hidhide.rs  mock.rs  mod.rs  noop_hider.rs  sdl3.rs  traits.rs
crates/inputforge-core/src/engine/: command.rs  dependencies.rs  mod.rs  output_handler.rs  output_state.rs  run.rs  tests.rs
crates/inputforge-core/src/mode/: mod.rs  resolve.rs  state.rs
crates/inputforge-core/src/output/: keyboard.rs  mock.rs  mod.rs  mouse.rs  traits.rs  vjoy_output.rs
crates/inputforge-core/src/pipeline/: condition.rs  merge.rs  mod.rs  test_helpers.rs
crates/inputforge-core/src/processing/: calibration.rs  curves.rs  deadzone.rs  inversion.rs  mod.rs  polarity.rs
crates/inputforge-core/src/profile/: library.rs  manager.rs  mod.rs  types.rs
crates/inputforge-core/src/snapshot/: config.rs  fs.rs  hash.rs  index.rs  mod.rs  pending_delete.rs  tests.rs  types.rs
crates/inputforge-core/src/state/: cache.rs  calibration.rs  device.rs  mod.rs  output_cache.rs  status.rs
crates/inputforge-core/src/types/: address.rs  device.rs  input.rs  mapping.rs  mod.rs
crates/inputforge-gui/: Cargo.toml
crates/inputforge-gui-dx/: Cargo.toml  README.md  THIRD_PARTY_LICENSES.md
crates/inputforge-gui-dx/assets/: global.css
crates/inputforge-gui-dx/assets/components/: badge.css  bottom-drawer.css  button.css  card.css  checkbox.css  chip.css  dialog.css  drawer.css  field.css  icon-button.css  icon.css  integer-input.css  label.css  layout.css  menu.css  number-input.css  portal.css  select.css  separator.css  slider.css  sortable.css  spinner.css  status-bar.css  switch.css  tabs.css  text-input.css  tooltip.css
crates/inputforge-gui-dx/assets/frame/: banner.css  bulk_map.css  deadzone.css  empty_state.css  layout.css  mapping_editor.css  mapping_list.css  panel_slot.css  profiles.css  response_curve.css  settings_panel.css  status_bar.css  top_bar.css
crates/inputforge-gui-dx/assets/shell/: placeholder-shell.css
crates/inputforge-gui-dx/assets/toast/: toast.css
crates/inputforge-gui-dx/assets/tokens/: colors.css  elevation.css  instruments.css  motion.css  radii.css  spacing.css  typography.css
crates/inputforge-gui-dx/examples/: bridge_demo.rs  component_gallery.rs
crates/inputforge-gui-dx/src/: app.rs  bridge.rs  context.rs  lib.rs
crates/inputforge-gui-dx/src/components/: badge.rs  bottom_drawer.rs  button.rs  card.rs  checkbox.rs  chip.rs  click_away_listener.rs  dialog.rs  drawer.rs  field.rs  icon.rs  icon_button.rs  integer_input.rs  label.rs  layout.rs  menu.rs  mod.rs  number_input.rs  portal.rs  segmented_control.rs  select.rs  separator.rs  slider.rs  spinner.rs  status_bar.rs  switch.rs  tab_button.rs  tabs.rs  tabs_list.rs  tabs_root.rs  text_input.rs  tooltip.rs
crates/inputforge-gui-dx/src/components/menu/: focus_walker.rs  mod.rs
crates/inputforge-gui-dx/src/components/sortable/: gap.rs  handle.rs  item.rs  live_region.rs  mod.rs  state.rs
crates/inputforge-gui-dx/src/frame/: mod.rs  view_state.rs
crates/inputforge-gui-dx/src/frame/banner/: logic.rs  mod.rs
crates/inputforge-gui-dx/src/frame/bulk_map/: apply.rs  auto_map.rs  conflicts.rs  empty_state.rs  group_actions.rs  mod.rs  row_readout.rs  state.rs  summary.rs  tests.rs
crates/inputforge-gui-dx/src/frame/layout/: empty_state.rs  mod.rs
crates/inputforge-gui-dx/src/frame/mapping_editor/: empty_state.rs  engine_offline_banner.rs  external_edit.rs  header.rs  inactive_hint.rs  input_field.rs  keyboard.rs  live_readout.rs  mod.rs  name_field.rs  test_helpers.rs  tests.rs  undo_log.rs  undo_recap.rs
crates/inputforge-gui-dx/src/frame/mapping_list/: add_inline.rs  empty.rs  filter.rs  group.rs  keyboard.rs  mod.rs  rename_inline.rs  row.rs  source_label.rs  tests.rs
crates/inputforge-gui-dx/src/frame/panel_slot/: device_panel.rs  mod.rs
crates/inputforge-gui-dx/src/frame/profiles/: actions.rs  delete_dialog.rs  library.rs  mod.rs  new_profile.rs  new_profile_submode.rs  no_profile.rs  open_choice_submode.rs  projection.rs  snapshot_drawer.rs  tests.rs
crates/inputforge-gui-dx/src/frame/settings_panel/: field_row.rs  mod.rs  prune_confirm.rs  section.rs  snapshots_section.rs  startup_section.rs
crates/inputforge-gui-dx/src/frame/status_bar/: logic.rs  mod.rs  tests.rs
crates/inputforge-gui-dx/src/frame/top_bar/: mod.rs  primary_nav.rs  profile_name.rs
crates/inputforge-gui-dx/src/icons/: mod.rs
crates/inputforge-gui-dx/src/lifecycle/: mod.rs
crates/inputforge-gui-dx/src/patterns/: destructive_confirm.rs  dirty_confirm.rs  mod.rs
crates/inputforge-gui-dx/src/shell/: mod.rs  placeholder.rs  status_bar_view.rs
crates/inputforge-gui-dx/src/theme/: mod.rs
crates/inputforge-gui-dx/src/toast/: mod.rs  queue.rs  state.rs  viewport.rs  warnings_bridge.rs
crates/inputforge-gui-dx/src/tray/: action.rs  mod.rs
crates/inputforge-gui/src/: app.rs  lib.rs  theme.rs
crates/inputforge-gui/src/panels/: calibration_window.rs  center_panel.rs  device_view.rs  input_monitor.rs  input_viewer_window.rs  left_panel.rs  mapping_editor.rs  mod.rs  mode_editor.rs  profile_window.rs  status_bar.rs
crates/inputforge-gui/src/widgets/: action_card.rs  action_config.rs  axis_bar.rs  button_grid.rs  calibration_editor.rs  curve_editor.rs  deadzone_editor.rs  empty_state.rs  hat_indicator.rs  mod.rs  status_dot.rs  tab_bar.rs  toast.rs
(+141 files in other folders)
