[workspace]
members = ["crates/inputforge-core", "crates/inputforge-gui-dx", "crates/inputforge-app"]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.1"
edition = "2024"
license = "MIT"
rust-version = "1.88"
description = "Remap physical joystick, pedal, and throttle inputs to virtual vJoy devices"
repository = "https://github.com/ClementCornut/inputforge"
readme = "README.md"
keywords = ["joystick", "vjoy", "input-remapping", "flight-simulation"]
categories = ["hardware-support"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
tokio = { version = "1", default-features = false, features = ["rt", "time", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Identifiers
uuid = { version = "1.21", features = ["v4"] }
ulid = { version = "1.2.1", features = ["serde"] }

# Unicode text processing
unicode-segmentation = "1.13"

# Snapshot subsystem
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Collections
indexmap = "2.14"

# Cross-platform Reveal in OS file manager
opener = { version = "0.8", features = ["reveal"] }

# Allocator
mimalloc = "0.1"

# Input
sdl3 = "0.17"

# Filesystem
dirs = "6"
tempfile = "3"
rfd = "0.17"

# Output
vjoy = "0.7"
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
] }

# System tray
tray-icon = "0.21"
muda = "0.17"

# GUI
dioxus = "0.7.9"
dioxus-ssr = "0.7.9"
scraper = "0.26.0"
arboard = { version = "3.6.1", default-features = false }

# Internal crates
inputforge-core = { path = "crates/inputforge-core" }
inputforge-gui-dx = { path = "crates/inputforge-gui-dx" }

# Compiler lints (M-STATIC-VERIFICATION)
[workspace.lints.rust]
unsafe_code = "deny"
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

# Clippy lints (M-STATIC-VERIFICATION)
[workspace.lints.clippy]
# Major lint groups
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Restriction subset (M-STATIC-VERIFICATION)
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"

# Structured logging compatibility
literal_string_with_formatting_args = "allow"

# Project-specific allowances
cast_precision_loss = "allow"
module_name_repetitions = "allow"
# Transitive dep conflicts (e.g., uuid -> hashbrown) are unavoidable.
multiple_crate_versions = "allow"
