[package]
name = "inputforge-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
inputforge-core   = { workspace = true }
inputforge-gui-dx = { workspace = true }
anyhow            = { workspace = true }
parking_lot       = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc          = { workspace = true }
clap              = { workspace = true }
tray-icon         = { workspace = true }
windows           = { workspace = true }
chrono            = { workspace = true }

[lints]
workspace = true
