[package]
name = "inputforge-app"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "inputforge"
path = "src/main.rs"

[dependencies]
inputforge-core      = { workspace = true }
inputforge-gui-dx    = { workspace = true }
inputforge-autostart = { workspace = true }
anyhow            = { workspace = true }
parking_lot       = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc          = { workspace = true }
clap              = { workspace = true }
tray-icon         = { workspace = true }
windows           = { workspace = true }

[lints]
workspace = true
