[package]
name = "inputforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Default features are Windows-only. Use `--no-default-features` on non-Windows platforms.
default = ["sdl3-input", "vjoy-output", "win32-io"]
sdl3-input = ["dep:sdl3"]
vjoy-output = ["dep:vjoy"]
win32-io = ["dep:windows"]
test-util = []

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

# Hardware I/O (optional, behind feature gates)
sdl3 = { workspace = true, optional = true }
vjoy = { workspace = true, optional = true }
windows = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
