[package]
name = "inputforge-gui-dx"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description.workspace  = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
inputforge-core = { workspace = true }
dioxus          = { workspace = true, features = ["desktop"] }
tokio           = { workspace = true }
muda            = { workspace = true }
parking_lot     = { workspace = true }
tracing         = { workspace = true }
serde           = { workspace = true }
anyhow          = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints]
workspace = true
