[package]
name = "inputforge-gui-dx"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description.workspace  = true
repository.workspace   = true
readme                 = "README.md"
keywords.workspace     = true
categories.workspace   = true

[dependencies]
inputforge-core      = { workspace = true }
dioxus               = { workspace = true, features = ["desktop"] }
tokio                = { workspace = true }
muda                 = { workspace = true }
parking_lot          = { workspace = true }
tracing              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
anyhow               = { workspace = true }
unicode-segmentation = { workspace = true }
arboard              = { workspace = true }
rfd                  = { workspace = true }
chrono               = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
dioxus-ssr         = { workspace = true }
scraper            = { workspace = true }

[lints]
workspace = true
