[package]
name = "inputforge-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
inputforge-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
