[package]
name = "inputforge-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
inputforge-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
parking_lot = { workspace = true }
muda = { workspace = true }

[dev-dependencies]
egui_kittest = { workspace = true }

[lints]
workspace = true
